# endpoints/courier_endpoints.py
@@ -1,9 +1,10 @@
 from utilities import has_role
 from models import Courier
 from app import db
-from order import *
+from marshmallow_models import *
 
 courier_schema = CourierSchema()
+
 
 @has_role('shipping_admin')
 def add_courier(courier_body):
@@ -13,12 +14,13 @@ def add_courier(courier_body):
     db.session.commit()
     return result_courier(new_courier)
 
-@has_role(['shipping_admin','shipping_courier'])
+
+@has_role(['shipping_admin', 'shipping_courier'])
 def edit_courier(id, courier_body):
     courier = db.session.query(Courier).filter_by(id=id).first()
 
     if not courier:
-        return {'error': '{} not found'.format(id)}, 404
+        return {'error': f'Courier {id} not found'}, 404
 
     courier.name = courier_body['name']
     courier.location = courier_body['location']
@@ -26,14 +28,18 @@ def edit_courier(id, courier_body):
 
     return result_courier(courier)
 
+
+schema = CourierSchema()
+
+
 @has_role('shipping_admin')
 def list_couriers():
     couriers = db.session.query(Courier).all()
     if not couriers:
-        return {'message':'error not found'}, 404
+        return {'message': 'No couriers found!'}, 404
 
-    for courier in couriers:
-        return courier_schema.dump(courier)
+    return schema.dump(couriers, many=True)
+
 
 @has_role('shipping_admin')
 def delete_courier(id):
@@ -42,9 +48,10 @@ def delete_courier(id):
     if courier:
         db.session.delete(courier)
         db.session.commit()
-
-        return {f'The courier with {id} id is deleted!'}, 200
     else:
-        return {'message':'error not found'}, 404
+        return {'error': 'Not found'}, 404
+
+    return {'message': 'Successfully'}, 200
+
 
 
